# TS-Foundation-Benchmark

./: Dockerfile  README.md  pyproject.toml
tests/: test_benchmark.py
ts_benchmark/: __init__.py  __main__.py  cli.py  datasets.py  evaluator.py  exceptions.py  models.py  reporter.py
ts_benchmark/baselines/: __init__.py  arima.py  lstm.py  xgboost_model.py
ts_benchmark/foundation/: __init__.py  chronos_model.py
